--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {},
   "devDependencies": {
     "vite": "^2.8.6",
+    "vite-plugin-full-reload": "^1.0.0",
     "vite-plugin-ruby": "^3.0.8",
     "vite-plugin-windicss": "^1.8.3",
     "windicss": "^3.5.1"
