removed unused dependencies and added login and register

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ node_modules
 # https://vitejs.dev/guide/env-and-mode.html#env-files
 *.local
 
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
