--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "trader-app",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@rails/webpacker": "5.4.3",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@tailwindcss/typography": "^0.5.2",
+    "@tailwindcss/ui": "^0.7.2",
+    "postcss-100vh-fix": "^1.0.2",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
+  },
   "devDependencies": {
-    "vite": "^2.8.6",
-    "vite-plugin-full-reload": "^1.0.0",
-    "vite-plugin-ruby": "^3.0.8",
-    "vite-plugin-windicss": "^1.8.3",
-    "windicss": "^3.5.1"
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
+    "webpack-dev-server": "^3"
   }
 }
