--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ x-shared-config: &shared-config
   depends_on:
     - postgres
     - redis
+    - sidekiq
 
 services:
   website:
@@ -46,8 +47,16 @@ services:
     volumes:
       - '.:/website'
   sidekiq:
-    <<: *shared-config
+    image: trader-app_website
     command: bundle exec sidekiq -C config/sidekiq.yml
+    env_file:
+      - ./docker/.env
+    volumes:
+      - '.:/website'
+    depends_on:
+      - redis
+    networks:
+      - gateway
     
   postgres:
     image: postgres:13.4-alpine
@@ -65,6 +74,8 @@ services:
       - "6379:6379"
     volumes:
       - redis:/data
+    networks:
+      - gateway
 volumes:
   base_cache_rails:
   base_gems:
